--- a/content/resources/11-945s04-th.md
+++ b/content/resources/11-945s04-th.md
@@ -4,6 +4,8 @@ description: ''
 file: /courses/11-945-springfield-studio-spring-2004/72ecbc53ae0b5213e9541ed159064654_11-945s04-th.jpg
 file_size: 6515
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: The existing Gerena School in Springfield. (Image courtesy of the studio.)
   credit: ''
