--- a/content/resources/11-945s04.md
+++ b/content/resources/11-945s04.md
@@ -4,6 +4,8 @@ description: ''
 file: /courses/11-945-springfield-studio-spring-2004/fb656ca0b0d2118c4b972b11e3d7ac0b_11-945s04.jpg
 file_size: 46791
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: The existing Gerena School in Springfield. (Image courtesy of the studio.)
   credit: ''
